--- a/_config.yml
+++ b/_config.yml
@@ -1,19 +1,19 @@
-title:            Site Title
-description:      Describe your website.
+title:            Ask Mr. Calculus
+description:      AP Calculus AB/BC Solutions and Tips
 # Your site's domain goes here. Leave localhost server or blank when working locally.
 url:              http://localhost:4000
 disqus_shortname:
 
 # Owner/author information
 owner:
-  name:           Your Name
+  name:           Mr. Calculus
   avatar:         bio-photo.jpg
-  bio:            "Describe your self."
-  email:          your@email.com
+  bio:            "A mysterious teacher from Diamond Bar High School."
+  email:          askmrcalculus@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   twitter:
   facebook:
-  github:
+  github:         askmrcalculus
   stackoverflow:
   linkedin:
   instagram:
@@ -41,12 +41,12 @@ links:
     url: /posts/
   - title: Theme Setup
     url: /theme-setup/
-  - title: Made Mistakes
-    url: http://mademistakes.com
+  - title: Original Site
+    url: http://home.roadrunner.com/~askmrcalculus/
     external: true
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-timezone:    America/New_York
+timezone:    America/Los_Angeles
 future:      true
 highlighter: pygments
 markdown:    kramdown
