--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            Ask Mr. Calculus
 description:      AP Calculus AB/BC Solutions and Tips
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              http://askmrcalculus.github.io/
+url:              http://askmrcalculus.github.io
 disqus_shortname:
 
 # Owner/author information
