added social networking part

--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ owner:
   bio:            "A mysterious teacher from Diamond Bar High School."
   email:          askmrcalculus@gmail.com
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
-  twitter:
-  facebook:
-  github:         askmrcalculus 
+  twitter:        MrCalculus
+  facebook:       MrCalculus
+  github:         askmrcalculus
   stackoverflow:
   linkedin:
   instagram:
