testing frq solutions

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,8 @@ links:
     url: /about/
   - title: Posts
     url: /posts/
+  - title: FRQ Solutions
+    url: /frq/
   - title: Theme Setup
     url: /theme-setup/
   - title: Original Site
