expanding external links, adding protips section

--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,8 @@ links:
     url: /about/
   - title: All Posts
     url: /posts/
+  - title: Helpful Tips
+    url: /tips/
   - title: External Links
     url: /external-links/
   - title: Original Site
