--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title:            REB311ION
 description:      15 years of AP Calculus AB/BC Solutions and Tips
 # Your site's domain goes here. Leave localhost server or blank when working locally.
-url:              https://www.reb311ion.com/
+url:              https://www.reb311ion.com/new-blog/
 disqus_shortname:
 
 # Owner/author information
