--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   facebook:       reb311ion
   github:         reb311ion
   stackoverflow:
-  linkedin:
+  linkedin:       reb311ion
   instagram:
   lastfm:
   tumblr:
